Got to build under submodules

--- a/maze/CMakeLists.txt
+++ b/maze/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(GDMaze)
+SET(LIB_NAME GDMaze) 
 
 # Automatically pick up files added to src
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
@@ -7,17 +8,14 @@ file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
         "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
         
-IF(CMAKE_BUILD_TYPE MATCHES RELEASE)
-    SET(LIB_NAME GDMaze.release) 
-ELSE()
-    SET(LIB_NAME GDMaze.debug) 
-ENDIF(CMAKE_BUILD_TYPE MATCHES RELEASE)
-
 add_library(${LIB_NAME} SHARED ${SOURCES})
 
-target_include_directories(${LIB_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src"
-					                   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc")
-target_link_libraries(${LIB_NAME} PUBLIC godot::cpp)
+target_include_directories(${LIB_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
+
+target_link_libraries(${LIB_NAME}
+	PRIVATE Random
+	PRIVATE MathStuff
+	PUBLIC godot::cpp)
 
 add_custom_command(
         TARGET ${LIB_NAME}  POST_BUILD
